# php-gui

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.test  README.md  composer.json  example.php
.github/workflows/: build-libs.yml  build-webview-helper.yml  docs.yml  tests.yml
docs/: Button.md  Canvas.md  Checkbutton.md  Combobox.md  Entry.md  Frame.md  Image.md  Input.md  Label.md  LabelFrame.md  Listbox.md  Menu.md  Menubutton.md  Message.md  Notebook.md  PanedWindow.md  Progressbar.md  Radiobutton.md  Scale.md  Scrollbar.md  Separator.md  Spinbox.md  Text.md  TopLevel.md  Treeview.md  WebView.md  Window.md  _coverpage.md  _sidebar.md  architecture.md  event-loop.md  example.md  getting-started.md  home.md  index.html  security.md  widgets.md
docs/dev/: CORE_FRAMEWORK_ARCHITECTURE.md  FRAMEWORK_ARCHITECTURE_REVIEW.md  WEBVIEW_IMPLEMENTATION_PLAN.md  coreframeowrkv1.md  v1.0-release-plan.md  webview-progress.md
docs/manual/: webview.md
scripts/: install-webview-helper.php
src/: Application.php  ProcessTCL.php  ProcessWebView.php
src/Install/: LibraryInstaller.php
src/Widget/: AbstractWidget.php  Button.php  Canvas.php  Checkbutton.php  Combobox.php  Entry.php  Frame.php  Image.php  Input.php  Label.php  LabelFrame.php  Listbox.php  Menu.php  Menubutton.php  Message.php  Notebook.php  PanedWindow.php  Progressbar.php  RadioGroup.php  Radiobutton.php  Scale.php  Scrollbar.php  Separator.php  Spinbox.php  Text.php  TopLevel.php  Treeview.php  WebView.php  Window.php
src/lib/webview_helper/: CMakeLists.txt  build.sh  webview_helper.cc
tests/: TestRunner.php  index_test.php
webview_test_app/: index.html  index.php  test_serve_from_disk.php
(+96 files in other folders)
